home page quase terminada, melhorei a grid, puxei o botão do quiz para cima e adicionei a fonte nova; na home page falta o botão do termos e condições

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,3 +27,7 @@ flutter:
     - family: VerdanaPro
       fonts:
         - asset: assets/fonts/verdana.ttf
+
+    - family: CanaroBook
+      fonts:
+        - asset: assets/fonts/Canaro-Book.ttf
