--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.4
   url_launcher: ^6.3.2
+  youtube_player_flutter: ^9.1.2
 
 dev_dependencies:
   flutter_test:
